# superstabilizer-splicing

./: .gitignore  add_errors.ipynb  add_errors.py  comparison.ipynb  split_code.ipynb  stim_stabilizers.ipynb  surface_code.ipynb  surface_code.py
cpp/: CMakeLists.txt  gen_entangled.cpp  main.cpp  surface_general_defect.cpp
cpp/entangled/: CMakeLists.txt  surface_general_defect.cpp
python_deformation_generator/: dist_code_benchmarking.ipynb  ent_dist_code_benchmarking.ipynb  superstabilizer_benchmarking.ipynb  surface_general_defect.py  test.ipynb
